# vitter

./: Cargo.toml  README.md
example/: decoder_input.json  encoder_input.json  run.sh  tokenizer_input.json
models/: download.sh
src/: lib.rs  main.rs
