[package]
name = "vitter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
fontdb = "0.15.0"
image = { version = "0.24.7", default-features = false, features = ["png", "gif", "jpeg", "webp"] }
log = "0.4.20"
ndarray = "0.15.6"
ort = { version = "2.0.0", features = ["load-dynamic"], git = "https://github.com/pykeio/ort", branch = "v2" }
resvg = "0.36.0"
serde_json = "1.0.107"
tokenizers = "0.14.1"
